# Pilothouse

./: .gitignore  CHANGELOG.md  Dockerfile  README.en.md  README.md  README.zh-CN.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
console/: Dockerfile  README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
docs/: PLUGIN_AUTHORING.md  PLUGIN_AUTHORING.zh-CN.md  USER_GUIDE.md  USER_GUIDE.zh-CN.md
examples/plugins/: README.md  discord_notifier.py  poll_url_trigger.py  siem_audit_forwarder.py
pilothouse/: __init__.py  cli.py  config.py  db.py  declarative.py  events.py  git_conventions.py  limits.py  models.py  notify.py  scheduler.py  tenants.py  testing.py  webhooks.py
pilothouse/agent/: __init__.py  runtime.py
pilothouse/api/: __init__.py  schemas.py  server.py
pilothouse/connectors/: __init__.py  base.py  datadog.py  github.py  kubernetes.py  linear.py  mcp.py  slack.py  (+1 more)
tests/: conftest.py  test_api.py  test_approvals.py  test_bug_fixer_and_reviewer.py  test_bulk_approvals.py  test_connectors.py  test_declarative.py  test_export.py  test_failure_notify.py  test_git_conventions.py  test_github_writes.py  test_kubernetes.py  test_limits.py  test_linear_connector.py  test_mcp.py  test_mcp_http.py  test_new_templates.py  test_notify.py  test_ops.py  test_plugin_config.py  test_plugins.py  test_providers.py  test_quotas.py  test_retry.py  test_runtime.py  test_scaffold.py  test_search_and_schedule.py  test_slack_interactivity.py  test_sse.py  test_stats.py  test_temporal_executor.py  test_tenants.py  test_testing_module.py  test_webhooks.py
(+57 files in other folders)
